--- a/gitssm/pom.xml
+++ b/gitssm/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>lombok</artifactId>
             <version>4.13-beta-1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
